# multi-modal-neural-network-brownfield

./: .windsurfrules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Open-source multi-modal small neural network v1.md  README.md  TRAINING_GUIDE.md  pyproject.toml  pytest.ini  train.py
.cursor/commands/: bmad-shard-doc.md
.github/: SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: codacy.instructions.md
.github/prompts/: bmad-bmm-create-story.prompt.md
.github/workflows/: codacy-analysis.yml  codacy.yml  pytorch-upgrade.yml  tests.yml
.roo/commands/: bmad-bmm-domain-research.md
.windsurf/workflows/: bmad-bmm-create-architecture.md  bmad-bmm-create-prd.md
_bmad-output/: PRD_Assessment_Summary.md  project-context.md  session-summary-2026-03-02.md
_bmad-output/implementation-artifacts/: architecture-2026-03-03.md  codebase-review-2026-03-03.md  ux-assessment-2026-03-03.md
_bmad-output/planning-artifacts/: PRD-neuralmix-v1-clean.md  epics.md  implementation-readiness-report-2026-03-03.md  next-steps-analysis-2026-03-02.md  product-brief.md
_bmad-output/stories/: story-1.1-amp-mixed-precision.md  story-1.2-gradient-checkpointing.md  story-1.3-flash-attention-fusion-mask.md  story-1.4-bert-tokenizer-checkpoint-validation.md  story-1.5-startup-banner-dry-run.md  story-1.6-quickstart-config.md  story-2.1-double-loop-inputs.md  story-2.2-double-loop-outputs.md  story-2.3-double-loop-logging-overhead.md  story-3.1-training-data-pipeline.md  story-3.2-full-training-run.md  story-3.3-inference-throughput.md  story-4.1-evaluation-framework.md  story-4.2-ablation-study.md  story-4.3-math-reasoning-benchmark.md  story-5.1-getting-started-notebook.md  story-5.2-training-notebook.md  story-5.3-evaluation-notebook.md  story-5.4-readme-hardware-docs.md  story-5.5-sphinx-api-docs.md  story-5.6-training-troubleshooting-guides.md  story-6.1-repo-polish-release-tag.md  story-6.2-huggingface-checkpoints.md  story-6.3-dockerfile.md  story-6.4-community-launch.md  story-6.5-launch-monitoring.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml  cursor.yaml  github-copilot.yaml  roo.yaml  windsurf.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/tea/workflows/testarch/atdd/steps-c/: step-04a-subagent-api-failing.md  step-04b-subagent-e2e-failing.md
_bmad/tea/workflows/testarch/teach-me-testing/: workflow-plan-teach-me-testing.md
_bmad/tea/workflows/testarch/teach-me-testing/templates/: certificate-template.md  certificate-template.md.bak  progress-template.yaml  session-notes-template.md
_bmad/tea/workflows/testarch/test-design/: test-design-template.md  validation-report-20260127-095021.md  validation-report-20260127-102401.md
_bmad/tea/workflows/testarch/test-review/: validation-report-20260127-095021.md  validation-report-20260127-102401.md  workflow-plan.md
_bmad/tea/workflows/testarch/test-review/steps-c/: step-03-quality-evaluation.md  step-03-quality-evaluation.md.bak  step-03a-subagent-determinism.md.bak  step-03b-subagent-isolation.md  step-03c-subagent-maintainability.md  step-03e-subagent-performance.md  step-03f-aggregate-scores.md
_bmad/tea/workflows/testarch/trace/: trace-template.md  validation-report-20260127-095021.md  validation-report-20260127-102401.md  workflow-plan.md
_bmad/tea/workflows/testarch/trace/steps-c/: step-04-analyze-gaps.md  step-05-gate-decision.md  step-05-gate-decision.md.bak
docs/: ARCHITECTURE.md  GPU_TRAINING.md  NPU_TRAINING.md  PRD_ASSESSMENT.md  ROADMAP.md  USER_GUIDE.md
src/data/: dataset.py
src/models/: text_encoder.py  vision_encoder.py
src/training/: trainer.py
tests/: README.md  test_data.py
tests/acceptance/: ATDD_GATE_FREEZE.md  README.md  test_sprint_thread_tdd_red.py
